--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,8 @@
   <groupId>com.jiaxun</groupId>
   <artifactId>httpcomponents</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <packaging>jar</packaging> 
+  
   <dependencies>
   <dependency>
     <groupId>org.apache.httpcomponents</groupId>  
@@ -10,4 +12,31 @@
     <version>4.5.3</version> 
   </dependency>
   </dependencies>
+  
+   <build>  
+    <plugins>  
+
+        <plugin>  
+            <groupId>org.apache.maven.plugins</groupId>  
+            <artifactId>maven-assembly-plugin</artifactId>  
+            <version>2.4</version>  
+            <configuration>  
+                <finalName>httpcomponents</finalName>  
+                <appendAssemblyId>false</appendAssemblyId>  
+                <descriptors>  
+                    <descriptor>${basedir}/src/main/assembly.xml</descriptor>  
+                </descriptors>  
+            </configuration>  
+            <executions>  
+                <execution>  
+                    <id>make-assembly</id>  
+                    <phase>package</phase>  
+                    <goals>  
+                        <goal>single</goal>  
+                    </goals>  
+                </execution>  
+            </executions>  
+        </plugin>  
+    </plugins>  
+</build> 
 </project>
